feat: improve everything

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,28 +3,30 @@
 # We're excluding docs and tests
 tests
 docs
+recipes
 .github
 .circleci
-.travis.yml
 .travis.yaml
-.appveyor.yml
+.travis.yml
 .appveyor.yaml
+.appveyor.yml
 .coverage
-.codeclimate.yml
 .codeclimate.yaml
-.coveralls.yml
+.codeclimate.yml
 .coveralls.yaml
+.coveralls.yml
 .dockerignore
 .readthedocs.yaml
+.readthedocs.yml
 .git
 .gitignore
-recipes
 azure-pipelines.yml
 azure-pipelines.yaml
 CONTRIBUTING.md
 CHANGELOG.md
 .editorconfig
 .pre-commit-config.yaml
+.pre-commit-config.yml
 SECURITY.md
 .scrutinizer.yml
 .scrutinizer.yaml
