--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,5 +1,4 @@
 # SPDX-License-Identifier Apache-2.0
 # Source: https://github.com/dmyersturnbull/tyranno
-"""
-New project generation for Tyranno.
-"""
+"scope: plugins":
+  - any: ["plugins/**/*"]
