--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,30 +3,18 @@
 name: deploy
 
 on:
-  workflow_call:
-    inputs:
-      os:
-        required: true
-        type: string
-      py-vr:
-        required: true
-        type: string
-    secrets:
-      GITHIB_TOKEN:
-        description: GitHub token
-        required: false
-      PYPI_TOKEN:
-        description: PyPi token
-        required: false
-      DOCKERHUB_USERNAME:
-        description: Docker Hub username
-        required: false
-      DOCKERHUB_TOKEN:
-        description: Docker Hub token
-        required: false
+  push:
+    tags:
+      - "v*"
 
 jobs:
+  test:
+    name: Test
+    uses: ./.github/workflows/test.yaml
+    secrets: inherit
+
   github-publish:
+    needs: [test]
     runs-on: ${{ os }}
     steps:
       - name: Download artifacts
@@ -44,19 +32,24 @@ jobs:
           files: dist/*
 
   pypi-publish:
+    needs: [test]
     runs-on: ${{ os }}
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: dist
+      - name: Install hatch
+        run: pip install hatch~=1.7
       - name: Publish to PyPi
-        run: poetry publish -vv --username __token__ --password ${{ env.pypi_token }}
+        run: hatch publish
         env:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+          HATCH_INDEX_USER: __token__
+          HATCH_INDEX_AUTH: ${{ secrets.PYPI_TOKEN }}
         if: ${{ env.pypi_token }} != ''
 
   docker-publish:
+    needs: [test]
     runs-on: ${{ os }}
     steps:
       - name: Download Docker image
@@ -95,3 +88,17 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  notify:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: [pypi-publish, docker-publish]
+    steps:
+      - name: Send Slack notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ job_status }}
+          SLACK_LINK_NAMES: true
+          MSG_MINIMAL: true
+        if: ${{ SLACK_WEBHOOK }} != ''
