--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,4 @@
 # Check out https://pre-commit.com/ for documentation
-# :tyranno: minimum_pre_commit_version: ${.test-deps.pre-commit}
 minimum_pre_commit_version: 3.3.3
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -27,18 +26,12 @@ repos:
     repo: https://github.com/commitizen-tools/commitizen
     rev: v3.5.2
 
-  - repo: https://github.com/python-poetry/poetry
-    rev: 1.5.1
-    hooks:
-      - id: poetry-check
-      - id: poetry-lock
-
   # --- Linters ---
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.0.278
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix-only]
         types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/psf/black
@@ -70,8 +63,8 @@ repos:
     hooks:
       - id: prettier
         stages: [commit]
-        # :tyranno: [--print-width, "${tool.black.line-length}"]
-        args: [--print-width, "100"]
+        # :tyranno: [--print-width, "${tool.ruff.line-length}"]
+        args: [--print-width, "120"]
         exclude: ^recipes/.*
 
   - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
