--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,9 @@ indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.md]
+trim_trailing_whitespace = false
+
 # 4-space, traditionally compiled without bytecode or JIT --
 #   Julia, Rust, D, C++, Objective-C, C, Fortran, and Assembly
 # We exclude Fortran fixed-form (e.g. .f/.ftn); these have weird indentation rules
