--- a/.github/workflows/test-one.yaml
+++ b/.github/workflows/test-one.yaml
@@ -1,5 +1,6 @@
-# SPDX-License-Identifier Apache-2.0
-# Source: https://github.com/dmyersturnbull/tyranno
+# SPDX-FileCopyrightText: Copyright 2020-2023, Contributors to Tyranno
+# SPDX-PackageHomePage: https://github.com/dmyersturnbull/tyranno
+# SPDX-License-Identifier: Apache-2.0
 name: Test one
 
 on:
