--- a/.github/settings.yaml
+++ b/.github/settings.yaml
@@ -74,6 +74,9 @@ labels:
   - name: "type: ci"
     description: "⚙️ Continuous integration and deployment (CI/CD)"
     color: "#ffffff"
+  - name: "type: chore"
+    description: "♻️️ A change that does not modify src or test files"
+    color: "#ffffff"
   - name: "type: docs"
     description: "📚 Documentation only changes"
     color: "#ffffff"
@@ -86,6 +89,12 @@ labels:
   - name: "type: discussion"
     description: "💬 Open for discussions and feedback"
     color: "#f9bbe5"
+  - name: "type: style"
+    description: "💎 A changes that does not affect the meaning of the code"
+    color: "#ffffff"
+  - name: "type: refactor"
+    description: "📦 A code change that neither fixes a bug nor adds a feature"
+    color: "#ffffff"
   - name: "priority: critical"
     description: "🟥 Must be fixed ASAP"
     color: "#b60205"
@@ -135,7 +144,7 @@ branches:
       required_pull_request_reviews:
         required_approving_review_count: 1
         dismiss_stale_reviews: false
-        require_code_owner_reviews: false
+        require_code_owner_reviews: true
       required_status_checks:
         strict: true
         contexts: []
