--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,6 @@
-# SPDX-License-Identifier Apache-2.0
-# Source: https://github.com/dmyersturnbull/tyranno
+# SPDX-FileCopyrightText: Copyright 2020-2023, Contributors to Tyranno
+# SPDX-PackageHomePage: https://github.com/dmyersturnbull/tyranno
+# SPDX-License-Identifier: Apache-2.0
 name: Test
 
 on:
@@ -7,6 +8,7 @@ on:
 
 env:
   main_os: ubuntu-latest
+  # :tyranno: main_python: ${tool.hatch.envs.all.matrix[0].python~|semver_max(@)~}
   main_python: "3.11"
 
 jobs:
@@ -25,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        # :tyranno: python-version: ${project.requires-python|.semver_minor(@)~}
+        # :tyranno: python: ${tool.hatch.envs.all.matrix.python~[0]~}
         python: ["3.11"]
     uses: ./.github/workflows/test-one.yaml
     with:
@@ -68,7 +70,7 @@ jobs:
         with:
           python-version: "${{ main-python }}"
       - name: Install Ruff
-        run: pip install ruff>=0.278,<1.0
+        run: pip install ruff>=0.280,<1.0
       - name: Run Ruff
         run: ruff --select S
 
