--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "hatchling.build"
 [project]
 name = "tyranno"
 requires-python = "~=3.9"
-readme = {file = "README.txt", content-type = "text/markdown"}
+readme = {file = "README.md", content-type = "text/markdown"}
 version = "1.0.0-0"
 description = "Generate beautifully modern Python projects with seamless, GitHub-based CI/CD and loads of integrations."
 maintainers = [
@@ -56,11 +56,11 @@ tyranno = "tyranno.__main__:cli"
 # :tyranno: ${.home}
 Homepage = "https://github.com/dmyersturnbull/tyranno"
 # :tyranno: ${.home}
-Repository = "https://github.com/dmyersturnbull/tyranno"
+Source = "https://github.com/dmyersturnbull/tyranno"
 # :tyranno: https://${.frag}.readthedocs.io
 Documentation = "https://tyranno.readthedocs.io"
 # :tyranno: ${.home}/issues
-"Bug Tracker" = "https://github.com/dmyersturnbull/tyranno/issues"
+Tracker = "https://github.com/dmyersturnbull/tyranno/issues"
 # :tyranno: https://pypi.org/project/${project.name}
 Download = "https://pypi.org/project/tyranno/"
 # :tyranno: ${.home}/blob/main/CHANGELOG.md
@@ -73,14 +73,14 @@ Changelog = "https://github.com/dmyersturnbull/tyranno/blob/main/CHANGELOG.md"
 
 [tool.hatch.envs.default]
 dependencies = [
-  "pre-commit        ~=3.3",
-  "bandit            ~=1.7",
-  "hypothesis        ~=6.0",
-  "pytest            ~=7.0",
-  "coverage[toml]    ~=7.0",
-  "pytest-cov        ~=3.0",
-  "mypy              ~=1.4",
-  "ruff              >=0.0.280",
+  "pre-commit         ~=3.3",
+  "bandit             ~=1.7",
+  "hypothesis         ~=6.0",
+  "pytest             ~=7.0",
+  "coverage[toml]     ~=7.0",
+  "pytest-cov         ~=3.0",
+  "mypy               ~=1.4",
+  "ruff               >=0.0.280",
   "sphinx             ~=7.0",
   "sphinx-autoapi     ~2.0",
   "sphinx-copybutton  >=0.5",
